hphp/hack/test/typecheck/global_const15.php.exp
File "global_const15.php", line 3, characters 11-16:
Invalid expression in constant initializer (Parsing[1002])
File "global_const15.php", line 3, characters 11-16:
Illegal constant value (Naming[2023])
