hphp/hack/test/typecheck/global_const15.php
<?hh // partial

const X = <div/>;

